--- a/about.html
+++ b/about.html
@@ -425,7 +425,7 @@
                   <div class="tt-content-carousel cc-shifted cursor-drag cc-scale-down cc-hide-pagination cc-hide-navigation" data-simulate-touch="true" data-speed="900">
   
                     <!-- Begin swiper container -->
-                    <div class="swiper">
+                    <div class="swiper-container">
   
                       <!-- Begin swiper wrapper (required) -->
                       <div class="swiper-wrapper">
@@ -435,7 +435,7 @@
                         <div class="swiper-slide">
                           <div class="tt-content-carousel-item">
                             <figure class="cover-opacity-1">
-                              <!-- <img class="tt-cc-image anim-image-parallax swiper-lazy" src="assets/img/low-qlt-thumb.jpg" data-src="assets/img/misc/misc-1.jpg" alt="Image"> -->
+                              <img class="tt-cc-image anim-image-parallax swiper-lazy" src="assets/img/10-1.jpg" data-src="assets/img/10-1.jpg" alt="Image">
                               <!-- <figcaption>Image Caption</figcaption> -->
                             </figure>
                           </div> <!-- /.tt-content-carousel-item -->
@@ -447,7 +447,7 @@
                         <div class="swiper-slide">
                           <div class="tt-content-carousel-item">
                             <figure class="cover-opacity-1">
-                              <!-- <img class="tt-cc-image anim-image-parallax swiper-lazy" src="assets/img/low-qlt-thumb.jpg" data-src="assets/img/misc/misc-2.jpg" alt="Image"> -->
+                              <img class="tt-cc-image anim-image-parallax swiper-lazy" src="assets/img/11_1.jpg" data-src="assets/img/11_1.jpg" alt="Image">
                               <!-- <figcaption>Image Caption</figcaption> -->
                             </figure>
                           </div> <!-- /.tt-content-carousel-item -->
@@ -473,7 +473,7 @@
                         <div class="swiper-slide">
                           <div class="tt-content-carousel-item">
                             <figure class="cover-opacity-1">
-                              <!-- <img class="tt-cc-image anim-image-parallax swiper-lazy" src="assets/img/low-qlt-thumb.jpg" data-src="assets/img/misc/misc-3.jpg" alt="Image"> -->
+                              <img class="tt-cc-image anim-image-parallax swiper-lazy" src="assets/img/11_2.jpg" data-src="assets/img/11_2.jpg" alt="Image">
                               <!-- <figcaption>Image Caption</figcaption> -->
                             </figure>
                           </div> <!-- /.tt-content-carousel-item -->
@@ -485,7 +485,7 @@
                         <div class="swiper-slide">
                           <div class="tt-content-carousel-item">
                             <figure class="cover-opacity-1">
-                              <!-- <img class="tt-cc-image anim-image-parallax swiper-lazy" src="assets/img/low-qlt-thumb.jpg" data-src="assets/img/misc/misc-4.jpg" alt="Image"> -->
+                              <img class="tt-cc-image anim-image-parallax swiper-lazy" src="assets/img/11_4.jpg" data-src="assets/img/11_4.jpg" alt="Image">
                               <!-- <figcaption>Image Caption</figcaption> -->
                             </figure>
                           </div> <!-- /.tt-content-carousel-item -->
@@ -497,7 +497,7 @@
                         <div class="swiper-slide">
                           <div class="tt-content-carousel-item">
                             <figure class="cover-opacity-1">
-                              <!-- <img class="tt-cc-image anim-image-parallax swiper-lazy" src="assets/img/low-qlt-thumb.jpg" data-src="assets/img/misc/misc-5.jpg" alt="Image"> -->
+                              <img class="tt-cc-image anim-image-parallax swiper-lazy" src="assets/img/11_5.jpg" data-src="assets/img/11_5.jpg" alt="Image">
                               <!-- <figcaption>Image Caption</figcaption> -->
                             </figure>
                           </div> <!-- /.tt-content-carousel-item -->
@@ -511,12 +511,12 @@
                     <!-- End swiper container -->
   
                     <!-- Begin content carousel navigation -->
-                    <div class="tt-cc-nav-prev">
+                    <!-- <div class="tt-cc-nav-prev prev">
                       <div class="tt-cc-nav-arrow magnetic-item"></div>
                     </div>
-                    <div class="tt-cc-nav-next">
+                    <div class="tt-cc-nav-next next">
                       <div class="tt-cc-nav-arrow magnetic-item"></div>
-                    </div>
+                    </div> -->
                     <!-- End content carousel navigation -->
   
                     <!-- Content carousel pagination -->
