--- a/blog-post.html
+++ b/blog-post.html
@@ -314,10 +314,7 @@
 							============================= -->
               <div class="ph-image">
                 <div class="ph-image-inner">
-                  <img
-                    src="assets/img/Showcase_PriveTrip_00.jpg"
-                    alt="Image"
-                  />
+                  <img src="assets/img/Showcase_PriveTrip_00.jpg" alt="Image" />
                 </div>
               </div>
               <!-- End page header image -->
@@ -540,7 +537,6 @@
 
                     <br />
 
-                   
                     <!-- End tt-Embed -->
 
                     <!-- Begin tt-Embed (Vimeo video) -->
@@ -635,7 +631,7 @@
 
                 <!-- Begin post comments 
 								========================= -->
-        
+
                 <!-- End post comments -->
 
                 <!-- Begin sliding sidebar 
@@ -939,10 +935,7 @@
 								* Use class "tt-pn-scroll" to enable hover title scroll. Note: If "tt-pn-hover-title" text is wider than "tt-pn-link" then it scrolls by default. The longer the text, the faster it scrolls.
 								-->
                 <div class="tt-page-nav tt-pn-scroll">
-                  <a
-                    href="project.html"
-                    class="tt-pn-link anim-fadeinup"
-                  >
+                  <a href="project.html" class="tt-pn-link anim-fadeinup">
                     <div class="tt-pn-title">Project</div>
                     <div class="tt-pn-hover-title">Project</div>
                   </a>
@@ -994,7 +987,7 @@
                       target="_blank"
                       rel="noopener"
                       class="tt-link"
-                      >Themetorium.net</a
+                      >2021 Alpha Creative</a
                     >
                   </div>
                 </div>
