--- a/about.html
+++ b/about.html
@@ -422,7 +422,7 @@
                       data-loop="true"......................(true/false)
                       data-pagination-type="bullets"........(bullets/fraction/progressbar)
                   -->
-                  <div class="tt-content-carousel cc-shifted cursor-drag cc-scale-down cc-hide-pagination cc-hide-navigation" data-simulate-touch="true" data-speed="900">
+                  <div class="tt-content-carousel cc-shifted cursor-drag cc-scale-down cc-hide-pagination cc-hide-navigation" data-simulate-touch="true" data-speed="300">
   
                     <!-- Begin swiper container -->
                     <div class="swiper-container">
@@ -511,12 +511,12 @@
                     <!-- End swiper container -->
   
                     <!-- Begin content carousel navigation -->
-                    <!-- <div class="tt-cc-nav-prev prev">
+                    <div class="tt-cc-nav-prev">
                       <div class="tt-cc-nav-arrow magnetic-item"></div>
                     </div>
-                    <div class="tt-cc-nav-next next">
+                    <div class="tt-cc-nav-next">
                       <div class="tt-cc-nav-arrow magnetic-item"></div>
-                    </div> -->
+                    </div>
                     <!-- End content carousel navigation -->
   
                     <!-- Content carousel pagination -->
@@ -768,7 +768,7 @@
                   * Use class "tt-pn-scroll" to enable hover title scroll. Note: If "tt-pn-hover-title" text is wider than "tt-pn-link" then it scrolls by default. The longer the text, the faster it scrolls.
                   -->
                   <div class="tt-page-nav tt-pn-scroll">
-                    <a href="portfolio-grid-modern.html" class="tt-pn-link anim-fadeinup">
+                    <a href="./project.html" class="tt-pn-link anim-fadeinup">
                       <div class="tt-pn-title">Project</div>
                       <div class="tt-pn-hover-title">Project</div>
                     </a> <!-- /.tt-pn-link -->
