--- a/blog-post.html
+++ b/blog-post.html
@@ -330,7 +330,7 @@
                 </div>
                 <!-- /.ph-categories -->
 
-                <h2 class="ph-caption-title ph-appear">
+                <h2 class="ph-caption-title ph-appear ph-log">
                   Want to Step Up Your Skills? You Need to Read This First
                 </h2>
                 <!-- You can use <br class="hide-from-lg"> to break a text line if needed -->
