--- a/project.html
+++ b/project.html
@@ -1099,8 +1099,8 @@
 								-->
                 <div class="tt-page-nav tt-pn-scroll">
                   <a href="contact.html" class="tt-pn-link anim-fadeinup">
-                    <div class="tt-pn-title">Let's talk</div>
-                    <div class="tt-pn-hover-title">Let's talk</div>
+                    <div class="tt-pn-title">Contact</div>
+                    <div class="tt-pn-hover-title">Contact</div>
                   </a>
                   <!-- /.tt-pn-link -->
 
