--- a/index.html
+++ b/index.html
@@ -1091,8 +1091,8 @@
                     />
                   </div>
 
-                  <!-- <div class="tt-form-group">
-										<label>Select an option</label>
+                  <div class="tt-form-group">
+										<label>Select an option*</label>
 										<select class="tt-form-control" name="Option" required>
 											<option value="" disabled selected>Please choose an option</option>
 											<option value="Say Hello">Say hello</option>
@@ -1100,7 +1100,7 @@
 											<option value="Feedback">Feedback</option>
 											<option value="Other">Other</option>
 										</select>
-									</div> -->
+									</div>
 
                   <div class="tt-form-group">
                     <label>Message*</label>
