--- a/blog-post.html
+++ b/blog-post.html
@@ -307,12 +307,12 @@
 					-->
           <div
             id="page-header"
-            class="ph-full ph-cap-sm ph-center ph-bg-image ph-image-shadow ph-image-cover-6 ph-content-parallax"
+            class="ph-full ph-cap-sm ph-center ph-bg-image ph-content-parallax"
           >
             <div class="page-header-inner tt-wrap max-width-1400">
               <!-- Begin page header image 
 							============================= -->
-              <div class="ph-image">
+              <div class="ph-image ph-image-shadow ph-image-cover-6">
                 <div class="ph-image-inner">
                   <img src="assets/img/Showcase_PriveTrip_00.jpg" alt="Image" />
                 </div>
