--- a/fusion_saigon.html
+++ b/fusion_saigon.html
@@ -539,7 +539,7 @@
                 <a
                 href="project_detail.html"
                 class="pgi-image-wrap"
-                data-cursor="View<br>Project"
+                data-cursor="<span class='font-custom'>View</span>"
                >
                 <div class="col-md-12 mt-30">
                   <div class="img-detail-work cursorZoom">
