--- a/project_detail.html
+++ b/project_detail.html
@@ -537,7 +537,7 @@
                   <a
                   href="assets/img/portfolio/single-project/project-2/project-2-2.jpg"
                   class="tt-gallery-item lg-trigger"
-                  data-cursor="View"
+                  data-cursor="<span class='font-custom'>View</span>"
                   >
                   <div class="img-detail-work cursorZoom">
                     <img
