--- a/resortphuquoc.html
+++ b/resortphuquoc.html
@@ -552,7 +552,7 @@
                   <a
                   href="project_detail.html"
                   class="pgi-image-wrap"
-                  data-cursor="View<br>Project"
+                  data-cursor="<span class='font-custom'>View</span>"
                  >
                   <div class="img-detail-work cursorZoom">
                     <img
