--- a/nagoya_shushi.html
+++ b/nagoya_shushi.html
@@ -535,7 +535,7 @@
                   <a
                   href="project_detail.html"
                   class="pgi-image-wrap"
-                  data-cursor="View<br>Project"
+                  data-cursor="<span class='font-custom'>View</span>"
                  >
                   <div class="img-detail-work cursorZoom">
                     <img
