--- a/blog-post.html
+++ b/blog-post.html
@@ -4,14 +4,12 @@
     <!-- Title -->
     <title>Alpha Creative Digital Agency</title>
 
-    <!-- Meta -->
-    <!-- <meta charset="utf-8" />
+    <meta charset="utf-8" />
+    <meta name="title" content="AlphaCreative Digital Agency" />
     <meta
       name="description"
-      content="Download Tank - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium."
+      content="We thrive to shape a vision, deliver an impacting brand and delivering an engaging story. What is the difference between a long lasting and a short term brand? How can a brand stands out? What are the different means to give the customer a memorable and an experiential impact?"
     />
-    <meta name="author" content="themetorium.net" /> -->
-
     <!-- Mobile Meta -->
     <meta
       name="viewport"
@@ -370,10 +368,10 @@
             <!-- Begin made with love 
 						========================== -->
             <div class="made-with-love ph-appear">
-              <div class="mwl-inner">
+              <!-- <div class="mwl-inner">
                 <div class="mwl-text">Made with</div>
                 <div class="mwl-icon"><i class="far fa-heart"></i></div>
-              </div>
+              </div> -->
             </div>
             <!-- End made with love -->
 
