--- a/project.html
+++ b/project.html
@@ -4,14 +4,12 @@
     <!-- Title -->
     <title>Projects | Alpha Creative Digital Agency</title>
 
-    <!-- Meta -->
     <meta charset="utf-8" />
-    <!-- <meta
+    <meta name="title" content="AlphaCreative Digital Agency" />
+    <meta
       name="description"
-      content="Download Tank - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium."
+      content="We thrive to shape a vision, deliver an impacting brand and delivering an engaging story. What is the difference between a long lasting and a short term brand? How can a brand stands out? What are the different means to give the customer a memorable and an experiential impact?"
     />
-    <meta name="author" content="themetorium.net" /> -->
-
     <!-- Mobile Meta -->
     <meta
       name="viewport"
@@ -330,7 +328,7 @@
                 <h1 class="ph-caption-title ph-appear">
                   Bright ideas driven by passion
                 </h1>
-                <div class="ph-caption-title-ghost ph-appear">Project</div>
+                <!-- <div class="ph-caption-title-ghost ph-appear">Project</div> -->
                 <div class="ph-caption-subtitle ph-appear">Selected Works</div>
               </div>
               <!-- End page header caption -->
