--- a/project_detail.html
+++ b/project_detail.html
@@ -4,12 +4,12 @@
     <!-- Title -->
     <title>Maia Resort Quy Nhon | Alpha Creative Digital Agency</title>
 
-    <!-- Meta -->
     <meta charset="utf-8" />
-    <meta name="description" content="Alpha Creative Digital Agency" />
-    <!-- <meta name="author" content="themetorium.net" /> -->
-
-    <!-- Mobile Meta -->
+    <meta name="title" content="AlphaCreative Digital Agency" />
+    <meta
+      name="description"
+      content="We thrive to shape a vision, deliver an impacting brand and delivering an engaging story. What is the difference between a long lasting and a short term brand? How can a brand stands out? What are the different means to give the customer a memorable and an experiential impact?"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -488,7 +488,7 @@
 					*********** Begin page content *********** 
 					************************************** -->
           <div id="page-content" class="detail-work">
-            <div class="container">
+            <div class="container ttgr-shifted">
               <div class="row mt-80 mb-80">
                 <div class="col-md-4 mt-30">
                   <!-- <div class="img-detail-work cursorZoom">
@@ -532,10 +532,10 @@
                   </div>
                 </div>
               </div>
-              <div class="row mt-20">
+              <div class="row mt-20  isotope-item">
                 <div class="col-md-12 mt-30">
                   <a
-                  href="assets/img/portfolio/single-project/project-2/project-2-2.jpg"
+                  href="./assets/img/maia_quynhon.jpg"
                   class="tt-gallery-item lg-trigger"
                   data-cursor="<span class='font-custom'>View</span>"
                   >
@@ -550,6 +550,11 @@
               </div>
               <div class="row mt-20">
                 <div class="col-md-12 mt-30">
+                  <a
+                  href="./assets/img/maia_quynhon.jpg"
+                  class="tt-gallery-item lg-trigger"
+                  data-cursor="<span class='font-custom'>View</span>"
+                  >
                   <div class="img-detail-work cursorZoom">
                     <img
                       class="cover img-fluid medium-zoom-image anim-image-parallax tt-lazy"
@@ -561,6 +566,11 @@
               </div>
               <div class="row mt-20">
                 <div class="col-md-12 mt-30">
+                  <a
+                  href="./assets/img/maia_quynhon.jpg"
+                  class="tt-gallery-item lg-trigger"
+                  data-cursor="<span class='font-custom'>View</span>"
+                  >
                   <div class="img-detail-work cursorZoom">
                     <img
                       class="cover img-fluid medium-zoom-image anim-image-parallax"
