--- a/about.html
+++ b/about.html
@@ -4,13 +4,12 @@
     <!-- Title -->
     <title>Alpha Creative Digital Agency</title>
 
-    <!-- Meta -->
-    <!-- <meta charset="utf-8" />
+    <meta charset="utf-8" />
+    <meta name="title" content="AlphaCreative Digital Agency" />
     <meta
       name="description"
-      content="Download Tank - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium."
+      content="We thrive to shape a vision, deliver an impacting brand and delivering an engaging story. What is the difference between a long lasting and a short term brand? How can a brand stands out? What are the different means to give the customer a memorable and an experiential impact?"
     />
-    <meta name="author" content="themetorium.net" /> -->
 
     <!-- Mobile Meta -->
     <meta
@@ -328,7 +327,7 @@
                 -->
                 <div class="ph-caption">
                   <h1 class="ph-caption-title ph-appear" style="font-size: 13px !important;">We are the Creative Digital Agency that design the brand of tomorrow.</h1>
-                  <div class="ph-caption-title-ghost ph-appear">About</div>
+                  <!-- <div class="ph-caption-title-ghost ph-appear">About</div> -->
                 </div> 
                 <!-- End page header caption -->
   
@@ -354,10 +353,10 @@
               <!-- Begin made with love 
               ========================== -->
               <div class="made-with-love ph-appear">
-                <div class="mwl-inner">
+                <!-- <div class="mwl-inner">
                   <div class="mwl-text">Made with</div>
                   <div class="mwl-icon"><i class="far fa-heart"></i></div>
-                </div>
+                </div> -->
               </div>
               <!-- End made with love -->
   
@@ -382,7 +381,7 @@
                   <div class="tt-row">
                   
   
-                    <div class="tt-col-lg-12">
+                    <div class="tt-col-lg-7" style="margin:0 auto !important">
   
                       <div class="text-xxlg font-alter">
                         <p class="anim-fadeinup text-center">We help our clients to define their brand DNA with a unique brand identity and connect their target audience.We build a trustworthy relationship, think out the box to set you appart and approach every project with the innate passion we nurture.We are artists - each individually driven to perfect our craft. We are a full-service digital agency that take a holistic approach to our clients’ needs from multifaceted campaigns and complete rebranding to ongoing retainer services. Our main objective is to analyse, design, create and give you the best solutions adapted to your business through transparency, integrity and trust.</p>
