--- a/blog.html
+++ b/blog.html
@@ -3,14 +3,12 @@
   <head>
     <!-- Title -->
     <title>Alpha Creative Digital Agency</title>
-
-    <!-- Meta -->
-    <!-- <meta charset="utf-8" />
+    <meta charset="utf-8" />
+    <meta name="title" content="AlphaCreative Digital Agency" />
     <meta
       name="description"
-      content="Download Tank - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium."
+      content="We thrive to shape a vision, deliver an impacting brand and delivering an engaging story. What is the difference between a long lasting and a short term brand? How can a brand stands out? What are the different means to give the customer a memorable and an experiential impact?"
     />
-    <meta name="author" content="themetorium.net" /> -->
 
     <!-- Mobile Meta -->
     <meta
@@ -330,7 +328,7 @@
                 -->
                 <div class="ph-caption">
                   <h1 class="ph-caption-title ph-appear" style="font-size: 13px !important;">We are the Creative Digital Agency that design the brand of tomorrow.</h1>
-                  <div class="ph-caption-title-ghost ph-appear">About</div>
+                  <!-- <div class="ph-caption-title-ghost ph-appear">About</div> -->
                 </div> 
                 <!-- End page header caption -->
   
@@ -356,10 +354,10 @@
               <!-- Begin made with love 
               ========================== -->
               <div class="made-with-love ph-appear">
-                <div class="mwl-inner">
+                <!-- <div class="mwl-inner">
                   <div class="mwl-text">Made with</div>
                   <div class="mwl-icon"><i class="far fa-heart"></i></div>
-                </div>
+                </div> -->
               </div>
               <!-- End made with love -->
   
