--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
   <head>
     <!-- Title -->
     <title>Alpha Creative Digital Agency</title>
-
-    <!-- Meta -->
-    <!-- <meta charset="utf-8" />
+    <meta charset="utf-8" />
+    <meta name="title" content="AlphaCreative Digital Agency" />
     <meta
       name="description"
-      content="Download Tank - Creative Portfolio Showcase HTML Website Template that comes with rich features and well-commented code. Made by Themetorium."
+      content="We thrive to shape a vision, deliver an impacting brand and delivering an engaging story. What is the difference between a long lasting and a short term brand? How can a brand stands out? What are the different means to give the customer a memorable and an experiential impact?"
     />
-    <meta name="author" content="themetorium.net" /> -->
+    <meta name="author" content="themetorium.net" />
 
     <!-- Mobile Meta -->
     <meta
@@ -319,9 +318,10 @@
               <div class="ph-caption max-width-1000">
                 <h1 class="ph-caption-title ph-appear font-normal">
                   <em> Hello,</em><br />
-                  we design a 360° Brand Experience Solution for your brand.
+                  Hello, we design a 360° Brand Experience Solution for your
+                  brand.
                 </h1>
-                <div class="ph-caption-title-ghost ph-appear">Hello!</div>
+                <!-- <div class="ph-caption-title-ghost ph-appear">Hello!</div> -->
                 <!-- <div class="ph-caption-subtitle ph-appear">Subtitle</div> -->
               </div>
               <!-- End page header caption -->
@@ -354,10 +354,10 @@
             <!-- Begin made with love 
 						========================== -->
             <div class="made-with-love ph-appear">
-              <!-- <div class="mwl-inner">
+             <!-- <div class="mwl-inner">
                 <div class="mwl-text">Made with</div>
                 <div class="mwl-icon"><i class="far fa-heart"></i></div>
-              </div> -->
+              </div>  -->
             </div>
             <!-- End made with love -->
           </div>
