--- a/nestbyaia.html
+++ b/nestbyaia.html
@@ -4,10 +4,12 @@
     <!-- Title -->
     <title>Maia Resort Quy Nhon | Alpha Creative Digital Agency</title>
 
-    <!-- Meta -->
     <meta charset="utf-8" />
-    <meta name="description" content="Alpha Creative Digital Agency" />
-    <!-- <meta name="author" content="themetorium.net" /> -->
+    <meta name="title" content="AlphaCreative Digital Agency" />
+    <meta
+      name="description"
+      content="We thrive to shape a vision, deliver an impacting brand and delivering an engaging story. What is the difference between a long lasting and a short term brand? How can a brand stands out? What are the different means to give the customer a memorable and an experiential impact?"
+    />
 
     <!-- Mobile Meta -->
     <meta
